; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_getchar.c_vpeekc_any.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_getchar.c_vpeekc_any.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@NUL = common dso_local global i32 0, align 4
@typebuf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@ESC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vpeekc_any() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @vpeekc()
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  %4 = load i32, i32* @NUL, align 4
  %5 = icmp eq i32 %3, %4
  br i1 %5, label %6, label %11

6:                                                ; preds = %0
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @typebuf, i32 0, i32 0), align 8
  %8 = icmp sgt i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %6
  %10 = load i32, i32* @ESC, align 4
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %9, %6, %0
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @vpeekc(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
